Download torrents async, then synchronize the torrent item downloader to prevent downloading 2 torrents for the same item at once.